# test-task-ave-tech

./: .env  .gitignore  Dockerfile  README.md  README_2_EXERCISE.md  docker-compose.yaml  pyproject.toml
src/: app.py  config.py  depends.py  exceptions.py
src/db/: base.py
src/repositories/: repository.py
src/routing/: data_phone.py
src/schemas/: data_phone.py
src/services/: data_phone.py
tests/: conftest.py
tests/unit/: test_api.py
