[project]
name = "ave-tech"
version = "0.1.0"
description = ""
authors = [
    {name = "Grigory Ivanov",email = "grigorashekivanov2@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
[tool.poetry]
package-mode = false

# Основные зависимости приложения
[tool.poetry.group.main.dependencies]
fastapi = "0.115.12"
aiohttp = "3.11.18"
uvicorn = "0.34.2"
pydantic-settings = "^2.9.1"
aioredis = "^2.0.1"
redis = "6.1.0"
phonenumbers = "9.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
loguru = "0.7.3"


[tool.poetry.dependencies]
pydantic-extra-types = "^2.10.4"
[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"
